force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Clearance_Result__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Result__c</fullName>
    <label>Clearance Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Not Cleared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>