force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Clearance_Run_on_Justifacts__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Run_on_Justifacts__c</fullName>
    <label>Clearance Run on Justifacts?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No, upload on the Placement Site Information Page</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>