force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Consent_to_Request_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Request_Clearance__c</fullName>
    <inlineHelpText>I give permission to the C2L-PHL and its contracted agencies, partners and funders to run criminal, Child abuse and FBI clearances, if and only if, needed for the position I am assigned.</inlineHelpText>
    <label>Consent to Request Clearance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <isActive>false</isActive>
                <label>Not Applicable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>