force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Date_of_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Clearance__c</fullName>
    <label>Date of Clearance</label>
    <type>Date</type>
</CustomField>