force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Does_Applicant_Need_Clearances__c.field-meta.xml
<CustomField>
    <fullName>Does_Applicant_Need_Clearances__c</fullName>
    <label>Does Applicant Need Clearances?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>