force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Does_the_Youth_s_Partner_Live_With_Them__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Youth_s_Partner_Live_With_Them__c</fullName>
    <label>Does the Youth&apos;s Partner Live With Them?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>