force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Emergency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone__c</fullName>
    <inlineHelpText>Enter only digits (ex: 1234567890)</inlineHelpText>
    <label>Emergency Contact Phone</label>
    <type>Phone</type>
</CustomField>