force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Explanation_of_Attestations__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Attestations__c</fullName>
    <inlineHelpText>Please explain the source of the applicant&apos;s income</inlineHelpText>
    <label>Explanation of Attestations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>