force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Guardian_Consent_Required__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Consent_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guardian Consent Required</label>
    <type>Checkbox</type>
</CustomField>