force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Guardian_Email__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Email__c</fullName>
    <label>Guardian Email</label>
    <type>Email</type>
</CustomField>