force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Guardian_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Phone_Number__c</fullName>
    <inlineHelpText>Enter only digits (ex: 1234567890)</inlineHelpText>
    <label>Guardian Phone Number</label>
    <type>Phone</type>
</CustomField>