force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/How_Many_Children_in_Youth_s_Household__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Children_in_Youth_s_Household__c</fullName>
    <label>How Many Children in Youth&apos;s Household?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>