force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Income_Attestation__c.field-meta.xml
<CustomField>
    <fullName>Income_Attestation__c</fullName>
    <label>Does the applicant receive any income?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, the applicant receives income</fullName>
            </value>
            <value>
                <fullName>No, the applicant receives zero income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>