force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Interest_in_dividends_from_assets__c.field-meta.xml
<CustomField>
    <fullName>Interest_in_dividends_from_assets__c</fullName>
    <label>Interest in dividends from assets</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>