force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Is_this_Youth_TANF_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_this_Youth_TANF_Eligible__c</fullName>
    <label>Is this Youth TANF Eligible?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>