force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Last_4_SSN__c.field-meta.xml
<CustomField>
    <fullName>Last_4_SSN__c</fullName>
    <label>Last 4 SSN</label>
    <length>4</length>
    <type>Text</type>
</CustomField>