force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Launchpad__Stage__c.field-meta.xml
<CustomField>
    <fullName>Launchpad__Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Shortlisted</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Provider Selected</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Matched with Provider</fullName>
            </value>
            <value>
                <fullName>Ready for JEVs Sign-Off</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>Potential Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>