force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Media_Picture_Release__c.field-meta.xml
<CustomField>
    <fullName>Media_Picture_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Media &amp; Picture Release</label>
    <type>Checkbox</type>
</CustomField>