force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Parent_Primary_Caregiver_of_Child_ren__c.field-meta.xml
<CustomField>
    <fullName>Parent_Primary_Caregiver_of_Child_ren__c</fullName>
    <inlineHelpText>Is the applicant a parent or primary caregiver of child(ren) under 18?</inlineHelpText>
    <label>Parent/Primary Caregiver of Child(ren)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>