force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Parent_s_Consent__c.field-meta.xml
<CustomField>
    <fullName>Parent_s_Consent__c</fullName>
    <label>Parent&apos;s Consent</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>