force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Passed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Passed_Reason__c</fullName>
    <label>Passed Reason</label>
    <type>TextArea</type>
</CustomField>