force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Priority_Population__c.field-meta.xml
<CustomField>
    <fullName>Priority_Population__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Population</label>
    <type>Checkbox</type>
</CustomField>