force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Provider_Choice__c.field-meta.xml
<CustomField>
    <fullName>Provider_Choice__c</fullName>
    <label>Provider Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provider Selected</fullName>
            </value>
            <value>
                <fullName>Shortlisted</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>