force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Provider_Rank__c.field-meta.xml
<CustomField>
    <fullName>Provider_Rank__c</fullName>
    <label>Provider Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>