force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Public_assistance_payments__c.field-meta.xml
<CustomField>
    <fullName>Public_assistance_payments__c</fullName>
    <label>Public assistance payments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>