force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Race_and_or_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Race_and_or_Ethnicity__c</fullName>
    <inlineHelpText>Select one or more values on the left then click the arrow to move your selections to the right</inlineHelpText>
    <label>Applicant&apos;s Race and/or Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Indian or Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Hispanic or LatinX</fullName>
            </value>
            <value>
                <fullName>Multiracial</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Not Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Middle Eastern or North African</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>