force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Relationship_to_this_Young_Person__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_this_Young_Person__c</fullName>
    <label>Relationship to this Young Person?</label>
    <type>TextArea</type>
</CustomField>