force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Social_Security_or_Other_Payments__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_or_Other_Payments__c</fullName>
    <inlineHelpText>Social security payments, annuities, insurance policies, retirement funds, pensions or death benefits</inlineHelpText>
    <label>Social Security or Other Payments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>