force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Stipend__c.field-meta.xml
<CustomField>
    <fullName>Stipend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stipend</label>
    <referenceTo>Stipend__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>