force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Submitted_From_Universal_App__c.field-meta.xml
<CustomField>
    <fullName>Submitted_From_Universal_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted From Universal App</label>
    <type>Checkbox</type>
</CustomField>