force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Wages_from_Employment__c.field-meta.xml
<CustomField>
    <fullName>Wages_from_Employment__c</fullName>
    <inlineHelpText>(including commissions, tips, bonuses, fees, etc.)</inlineHelpText>
    <label>Wages from Employment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>