force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/What_Governmental_Benefits_Does__c.field-meta.xml
<CustomField>
    <fullName>What_Governmental_Benefits_Does__c</fullName>
    <inlineHelpText>Please indicate what governmental benefits the applicant receives</inlineHelpText>
    <label>Applicant&apos;s Governmental Benefits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TANF</fullName>
            </value>
            <value>
                <fullName>Food Stamps</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>SSI or SSD</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>