force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/What_is_the_applicant_s_current_living_s__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_applicant_s_current_living_s__c</fullName>
    <label>Applicant&apos;s current living situation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None (Default)</fullName>
            </value>
            <value>
                <fullName>Room, apartment, or house that you rent; not affiliated with a supportive housing program</fullName>
            </value>
            <value>
                <fullName>Apartment or house that you own</fullName>
            </value>
            <value>
                <fullName>Permanent Supportive Housing Program</fullName>
            </value>
            <value>
                <fullName>Transitional Supportive Housing Program</fullName>
            </value>
            <value>
                <fullName>Staying or living in someone else’s room, apartment, or house</fullName>
            </value>
            <value>
                <fullName>Foster care home or foster care group home</fullName>
            </value>
            <value>
                <fullName>Hospital, institution, long-term care facility, or substance abuse treatment/detox center</fullName>
            </value>
            <value>
                <fullName>Homeless/Place not meant for human habitation, such as a vehicle, abandoned building, or outside</fullName>
            </value>
            <value>
                <fullName>Emergency shelter, not a hotel</fullName>
            </value>
            <value>
                <fullName>Single Room Occupancy in hotel</fullName>
            </value>
            <value>
                <fullName>Other hotel or motel - paid for without emergency shelter voucher or rental subsidy</fullName>
            </value>
            <value>
                <fullName>Jail, prison, or juvenile detention facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>