force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/What_is_the_Applicant_s_Current_Relation__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_Applicant_s_Current_Relation__c</fullName>
    <label>Applicant&apos;s Current Relationship Status?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Married or Domestic partner</fullName>
            </value>
            <value>
                <fullName>Divorced or Separated</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>