force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Willing_to_accept_an_unselected_program__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_accept_an_unselected_program__c</fullName>
    <inlineHelpText>Is the participant willing to be placed in other programs outside of their preferred selected programs if none of their preferred selected programs are available?</inlineHelpText>
    <label>Willing to accept an unselected program?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>