force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Youth_Notification_Date_is_Today__c.field-meta.xml
<CustomField>
    <fullName>Youth_Notification_Date_is_Today__c</fullName>
    <formula>Program__r.Youth_Notification_Date__c == TODAY() &amp;&amp; ISPICKVAL(Program__r.Launchpad__Active__c, &apos;Yes&apos;) &amp;&amp; Program__r.RecordType.DeveloperName == &apos;Session&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Program Notification Date Today</label>
    <type>Checkbox</type>
</CustomField>