force-app/main/default/objects/Launchpad__Applicant_Tracking__c/recordTypes/Launchpad__Hire.recordType-meta.xml
<RecordType>
    <fullName>Launchpad__Hire</fullName>
    <active>false</active>
    <description>For recording hire and placement information</description>
    <label>Hire</label>
</RecordType>