force-app/main/default/objects/Launchpad__Applicant_Tracking__c/recordTypes/Launchpad__Interview.recordType-meta.xml
<RecordType>
    <fullName>Launchpad__Interview</fullName>
    <active>false</active>
    <description>For Resume Presentations and Interviews</description>
    <label>Interview</label>
</RecordType>