force-app/main/default/objects/Launchpad__Applicant_Tracking__c/recordTypes/Launchpad__New_Application.recordType-meta.xml
<RecordType>
    <fullName>Launchpad__New_Application</fullName>
    <active>true</active>
    <description>For Resume Presentations and Interviews</description>
    <label>New Application</label>
</RecordType>