force-app/main/default/objects/Launchpad__Applicant_Tracking__c/validationRules/Consent_to_Request_Clearance_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Consent_to_Request_Clearance_Validation</fullName>
    <active>true</active>
    <description>Don&apos;t accept applications without consent</description>
    <errorConditionFormula>ISPICKVAL(Consent_to_Request_Clearance__c,&apos;No&apos;)</errorConditionFormula>
    <errorDisplayField>Consent_to_Request_Clearance__c</errorDisplayField>
    <errorMessage>You must answer Yes in order to submit your application</errorMessage>
</ValidationRule>