force-app/main/default/objects/Launchpad__Applicant_Tracking__c/validationRules/Emergency_Contact_Exclusive_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Emergency_Contact_Exclusive_Email</fullName>
    <active>true</active>
    <errorConditionFormula>Emergency_Contact_Email__c =  Applicant_s_Email_Address__c</errorConditionFormula>
    <errorDisplayField>Emergency_Contact_Email__c</errorDisplayField>
    <errorMessage>Applicant cannot have the same email address as their emergency contact.</errorMessage>
</ValidationRule>